--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -432,7 +432,7 @@
     
                     }
                     .content {
-                        margin-top: 70px;
+                        margin-top: 100px;
                         padding: 0 6%;
                         ul {
                             gap: 60px 80px;
@@ -490,7 +490,6 @@
                                 height: auto;
     
                                 .text_wrap {
-                                    // border: 1px solid #f00;
                                     align-items: unset; justify-content: unset; min-width: unset; height: auto;
                                     flex-direction: column;
                                     padding-top: 120px;
@@ -1070,38 +1069,22 @@
                                 }
                             }
                         }
-                        // form[name=save_frm] {
-                        //     width: 100%; height: 60px;
-                        //     position: absolute; left: 0; top: 0; z-index: 3;
-                        //     padding: 20px;
-                        //     background-color: #000;
-                        //     display: none;align-items: center; justify-content: space-between;
-                        //     &.active {display:flex; }
-                            
-                        //     p {
-                        //         font-size: 14px;
-                        //         letter-spacing: -0.28px;
-                        //         color: #fff;
-                        //         a {
-                        //             @include font-openSans;
-                        //             padding: 10px 20px;
-                        //             color: #fff;
-                        //             font-size: 15px;
-                        //             letter-spacing: -0.3px;
-                        //             color: #fff;
-                        //             &.btn_save {
-                        //                 color: #000;
-                        //                 border-radius: 2px;
-                        //                 background-color: #fff;
-                        //             }
-                        //         }
-                        //     }
-                        // }
+                        form[name=save_frm] {
+                            height: 80px;
+                            padding: 15px 4%;
+                            p {
+                                display: flex; align-items: center;
+                                font-size: 24px;
+                                a {
+                                    font-size: 20px;
+                                }
+                            }
+                        }
                     }
 
 
                     .content {
-                        margin-top: 150px;
+                        margin-top: 200px;
                         @include subLayoutPadding();
                         ul {
                             gap: 60px 60px;
@@ -1581,6 +1564,21 @@
                                         }
                                     }
                                     
+                                }
+                            }
+                        }
+                        form[name=save_frm] {
+                            height: 60px;
+                            p {
+                                font-size: 14px;
+                                white-space: nowrap;
+                                &:last-of-type {
+                                    display: flex; justify-content: flex-end; 
+                                    width: 100%;
+                                }
+                                a {
+                                    padding: 7px 14px;
+                                    font-size: 16px;
                                 }
                             }
                         }
