--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -1152,6 +1152,122 @@ body {
 
             }
 
+            
+            &#trend_library {
+                @include marginTop-200;
+                @include fixed-layout_1412;
+
+                .sec_tit {
+                    .nav_location {
+                        display: flex;
+                        h2 {
+                            position: relative;
+                            margin-right: 48px;
+                            opacity: .2;
+                            &:last-child {margin-right: 0}
+                            &:not(:first-child) {
+                                &::after {
+                                    content: '';
+                                    position: absolute; right: 100%; top: 50%;
+                                    //  transform: translate(-50%,-50%);
+                                    transform: translateY(-50%);
+                                    margin-right: 20px;
+                                    width: 8px; height: 17px;
+                                    background: url('../images/common/ico_arrow_03.svg')no-repeat center/contain; 
+                                }
+                            }
+                            &:last-child {opacity: 1}
+                            &:only-child {opacity: 1}
+                        }
+                    }
+                 
+                }
+
+                .content_wrap {
+                    .con {
+                        @include marginTop-80;
+                        h2 {
+                            font-family: Arial;
+                            font-size: 24px;
+                            font-weight: bold;
+                            line-height: 1.5;
+                            letter-spacing: -0.48px;
+                            a {
+                                display: flex;
+                                img{margin: 0 0 0 10px;}
+                            }
+                        }
+
+                        ul {
+                            margin-top: 30px;
+                            display: flex; gap: 46px;
+                            li {
+                                border: 1px solid #f00;
+                                $wh: 440px;
+                                width: $wh; height: $wh;
+                                
+                                a {display: block; @include fullsize;}
+                                
+                                figure {
+                                    @include fullsize;
+                                    position: relative;
+                                    .img_wrap {
+                                        @include fullsize;
+                                        img {
+                                            @include fullsize; 
+                                            object-fit: cover;
+                                        }
+                                    }
+                                    .text_wrap {
+                                        @include fullsize;
+                                        position: absolute; left: 0; top: 0;
+                                        padding: 40px;
+                                        figcaption {
+                                            position: relative;
+                                            @include fullsize;
+                                            p {
+                                                position: absolute; 
+                                                width: 100%;
+                                                font-size: 32px;
+                                                font-weight: bold;
+                                                line-height: 1.38;
+                                                letter-spacing: -0.64px;
+                                                color: #fff;
+                                                &.top {
+                                                    max-width: 310px;
+                                                    left: 0; top: 0;
+                                                    display: flex; justify-content: space-between;
+                                                }
+                                                &.bottom {
+                                                    left: 0; bottom: 0;
+                                                }
+                                                &.arrow {
+                                                    max-width: 50px; max-height: 31px;
+                                                    width: auto;
+                                                    right: 0; top: 0;
+                                                }
+                                            }
+                                        }
+                                    }
+                                    
+                                }
+                                &:nth-child(3n) {
+                                    figure {
+                                        &::after {
+                                            content: '';
+                                            @include fullsize;
+                                            @include hidagradient_self(right);
+                                            position: absolute; right:0; top:0;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+                
+            }
+
         }
         
     } 
