--- a/kor/css/_function.scss
+++ b/kor/css/_function.scss
@@ -1,8 +1,8 @@
 // ====================================DEFAULT MIXIN====================================
 
 
-$color-100 : #0fa39a;
-$color-200 : #ea5417;
+$color-100 : #000;
+$color-200 : #fff;
 
 
 
@@ -124,6 +124,7 @@ $color-200 : #ea5417;
 @mixin marginTop-80 {margin-top: 80px;}
 @mixin marginTop-70 {margin-top: 70px;}
 @mixin marginTop-60 {margin-top: 60px;}
+@mixin marginTop-50 {margin-top: 50px;}
 @mixin marginTop-40 {margin-top: 40px;}
 @mixin marginTop-30 {margin-top: 30px;}
 
@@ -143,6 +144,7 @@ $color-200 : #ea5417;
 @mixin font-M {font-family: 'Montserrat';}
 @mixin font-nm {font-family: 'Nanum Myeongjo';}
 @mixin font-R {font-family: 'Roboto';}
+@mixin font-Pre {font-family: 'Pretendard';}
 @mixin font-Nanum {font-family: 'Nanum Brush Script';}
 @mixin font-gmark-bold {font-family: 'gmarket-b'; font-weight: bold;}
 @mixin font-gmark-m {font-family: 'gmarket-m'; font-weight: 500;}
@@ -326,7 +328,7 @@ body {
 /* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap'); */
-// @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); /* 프리스텐다드 */
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); /* 프리스텐다드 */
 // @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); /* Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); /* Open Sans */
 
