trend_library detail
trend_library detail  767 해야함

--- a/kor/css/_function.scss
+++ b/kor/css/_function.scss
@@ -351,6 +351,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {border: 0; word-break: keep-all;}
 
 /* HTML5 display-role reset for older browsers */
+h1, h2, h3, h4, h5, h6 {font-weight: unset;}
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {display: block;}
 ol, ul {list-style: none;}
