--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -1160,6 +1160,7 @@ body {
                 @include fixed-layout_1412;
 
                 .sec_tit {
+                    .mo_tit {display: none;}
                     .nav_location {
                         display: flex;
                         h2 {
@@ -1186,8 +1187,8 @@ body {
                 }
 
 
-                &.list, 
-                &.list_detail {
+                
+                &.list {
                     .content_wrap {
                         .con {
                             @include marginTop-80;
@@ -1210,6 +1211,16 @@ body {
                                     $wh: 440px;
                                     width: $wh; height: $wh;
                                     
+                                    &:nth-child(3n) {
+                                        figure {
+                                            &::after {
+                                                content: '';
+                                                @include fullsize;
+                                                @include hidagradient_self(right);
+                                                position: absolute; right:0; top:0;
+                                            }
+                                        }
+                                    }
                                     a {display: block; @include fullsize;}
                                     
                                     figure {
@@ -1226,6 +1237,7 @@ body {
                                             @include fullsize;
                                             position: absolute; left: 0; top: 0;
                                             padding: 40px;
+                                            overflow: hidden;
                                             figcaption {
                                                 position: relative;
                                                 @include fullsize;
@@ -1233,6 +1245,7 @@ body {
                                                     .arrow {
                                                         opacity: 1;
                                                     }
+                                                    .bottom {bottom: 0}
                                                 }
                                                 p {
                                                     position: absolute; 
@@ -1242,7 +1255,6 @@ body {
                                                     line-height: 1.38;
                                                     letter-spacing: -0.64px;
                                                     color: #fff;
-                                                    @include transition(all .15s);
 
                                                     &.top {
                                                         max-width: 310px;
@@ -1250,7 +1262,8 @@ body {
                                                         display: flex; justify-content: space-between;
                                                     }
                                                     &.bottom {
-                                                        left: 0; bottom: 0;
+                                                        @include transition(all .5s);
+                                                        left: 0; bottom: -100%;
                                                         backdrop-filter: blur(21px);
                                                         background-color: rgba(255, 255, 255, 0.2);
                                                         padding: 20px;
@@ -1262,6 +1275,7 @@ body {
                                                       
                                                     }
                                                     &.arrow {
+                                                        @include transition(all .15s);
                                                         max-width: 50px; max-height: 31px;
                                                         width: auto;
                                                         right: 0; top: 0;
@@ -1278,42 +1292,93 @@ body {
                     }
                 }
                 
-                &.list {
-                    .content_wrap {
-                        .con {
-                            ul {
-                                li {
-                                    &:nth-child(3n) {
-                                        figure {
-                                            &::after {
-                                                content: '';
-                                                @include fullsize;
-                                                @include hidagradient_self(right);
-                                                position: absolute; right:0; top:0;
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
                 &.list_detail {
                     .content_wrap {
                         .con {
+                            @include marginTop-80;
                             ul {
-                                position: relative; flex-wrap: wrap;
+                                display: flex;  flex-wrap: wrap; gap: 46px;
+                                position: relative;
                                 &::after {
                                     content: '';
                                     width: 100%; height: calc(440px / 2);
                                     @include hidagradient_self(bottom);
                                     position: absolute; left:0; bottom:0;
                                 }
+                                li {
+                                    $wh: 440px;
+                                    width: $wh; height: $wh;
+                                    a {display: block; @include fullsize;}
+                                  
+                                    
+                                    figure {
+                                        @include fullsize;
+                                        position: relative;
+                                        .img_wrap {
+                                            @include fullsize;
+                                            img {
+                                                @include fullsize; 
+                                                object-fit: cover;
+                                            }
+                                        }
+                                        .text_wrap {
+                                            @include fullsize;
+                                            position: absolute; left: 0; top: 0;
+                                            padding: 40px;
+                                            overflow: hidden;
+                                            figcaption {
+                                                position: relative;
+                                                @include fullsize;
+                                                &:hover {
+                                                    .arrow {
+                                                        opacity: 1;
+                                                    }
+                                                    .bottom {bottom: 0}
+                                                }
+                                                p {
+                                                    position: absolute; 
+                                                    width: 100%;
+                                                    font-size: 32px;
+                                                    font-weight: bold;
+                                                    line-height: 1.38;
+                                                    letter-spacing: -0.64px;
+                                                    color: #fff;
+
+                                                    &.top {
+                                                        max-width: 310px;
+                                                        left: 0; top: 0;
+                                                        display: flex; justify-content: space-between;
+                                                    }
+                                                    &.bottom {
+                                                        @include transition(all .5s);
+                                                        left: 0; bottom: -100%;
+                                                        backdrop-filter: blur(21px);
+                                                        background-color: rgba(255, 255, 255, 0.2);
+                                                        padding: 20px;
+                                                        
+                                                        font-size: 16px;
+                                                        font-weight: normal;
+                                                        line-height: 1.5;
+                                                        letter-spacing: -0.32px;
+                                                      
+                                                    }
+                                                    &.arrow {
+                                                        @include transition(all .15s);
+                                                        max-width: 50px; max-height: 31px;
+                                                        width: auto;
+                                                        right: 0; top: 0;
+                                                        opacity: 0;
+                                                    }
+                                                }
+                                            }
+                                        }
+                                        
+                                    }
+                                }
                             }
                         }
                     }
                 }
-
 
                 &.detail{
                     .btn.more {
@@ -1328,33 +1393,34 @@ body {
                         }
                     }
 
-                    .detail_head {position: sticky;top: 200px;}
                     .detail_body {
-                        margin-top: 80px;
                         display: flex; justify-content: space-between; gap: 72px;
                         .navi {
-                            position: sticky;top: 312px;height: 100%;
+                            position: sticky; top: 200px; height: 100%;
                             max-width: 468px;
                             width: 100%;
                             .lang {
+                                margin-top: 80px;
                                 display: flex;
                                 margin-bottom: 30px;
                                 li {
                                     margin-right: 15px;
                                     &:last-child {margin: 0;}
-                                    a {
+                                    a { 
+                                        @include transition(opacity .15s);
                                         font-size: 18px;
                                         font-weight: bold;
                                         line-height: 1.5;
                                         letter-spacing: -0.36px;
-                                        &.active {border-bottom: 2px solid #000;} 
+                                        opacity: .2;
+                                        &:hover,&.active {border-bottom: 2px solid #000;opacity: 1;} 
                                     }
                                 }
                             }
                             h2 {
-                                margin-bottom: 70px;
                                 @include font-Pre;
-                                font-size: 50px;
+                                @include hidaFont_50;
+                                margin-bottom: 70px;
                                 font-weight: bold;
                                 line-height: 1.3;
                                 letter-spacing: -1px;
@@ -1380,8 +1446,8 @@ body {
                         }
 
                         .content {
+                            margin-top: calc(80px + 32px);
                             width: 100%;
-
                             dl {
                                 &#trend, &#cmf, &#newsletter {
                                     padding-bottom: 50px;
@@ -1427,6 +1493,59 @@ body {
                                             @include marginTop-50;
                                         }
                                     }
+
+                                    .product {
+                                        margin-top: 64px;
+                                        padding: 0 30px;
+                                        ul {
+                                            display: flex; flex-wrap: wrap; gap: 76px;
+                                            li {
+                                                a {
+                                                    display: block;
+                                                    figure {
+                                                        position: relative;
+                                                        div {
+                                                            &.ico_wrap {
+                                                                position: absolute; right: 0; top: 0; z-index: 1;
+                                                                display: flex;
+                                                                img {
+                                                                    width: 15px; height: 15px;
+                                                                    opacity: .2;
+                                                                }
+                                                            }
+                                                            &.img_wrap {
+                                                                margin: 0 auto;
+                                                                position: relative;
+                                                                width: 220px; height: 220px; 
+                                                                .prod_thumb_bg {@include absolute-center;}
+                                                            }
+                                                        }
+                                                        figcaption {
+                                                            text-align: center;
+                                                            margin-top: 20px;
+                                                            p {
+                                                                font-size: 16px;
+                                                                line-height: 1.38;
+                                                                &:nth-child(1) {
+                                                                    color: #999;
+                                                                }
+                                                                &:nth-child(2) {
+                                                                    margin-top: 5px;
+                                                                    color: #000;
+                                                                }
+                                                                &:nth-child(3) {
+                                                                    margin-top: 15px;
+                                                                    font-size: 14px;
+                                                                    line-height: 1.43;
+                                                                    color: #666;
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
                                 }
 
                                 &#newsletter {
@@ -1444,11 +1563,11 @@ body {
                                         margin-top: 20px;
                                         a {
                                             width: 280px;
-                                            border: 1px solid #f00;
                                             img {
                                                 width: 280px; height: 280px;object-fit: cover;
                                             }
                                             span {
+                                                @include ellipsis(1);
                                                 display: block;
                                                 margin-top: 20px;
                                                 font-size: 16px;
@@ -1526,15 +1645,31 @@ body {
                                     border-bottom: 2px solid #000;
                                     ul {
                                         li {
-                                            padding: 18px 50px 18px 18px;
+                                            padding: 15px 50px 15px 18px;
                                             border-bottom: 1px solid #e5e5e5;
                                             &:last-child {border: none;}
+                                            &:nth-child(1) {
+                                                a {
+                                                    p {
+                                                        font-weight: bold;
+                                                        color: #000;
+                                                    }
+                                                }
+                                            }
                                             a {
-                                                display: flex; 
-                                                p {margin-left: 68px;}
+                                                display: flex; align-items: center;
+                                                p {
+                                                    @include transition(color .15s);
+                                                    margin-left: 68px;
+                                                    font-size: 16px;
+                                                    color: #999;
+                                                    &:hover {color: #000;}
+                                                }
                                                 span {
                                                     display: block;
                                                     margin: 0 0 0 auto;
+                                                    font-size: 14px;
+                                                    color: #999;
                                                 }
                                             }
                                         }
