--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -918,7 +918,7 @@
 
 
 @media (max-width: 767px) {
-    @mixin hidaFont_50 {font-size: 40px;}
+    @mixin hidaFont_50 {font-size: 34px;}
     @mixin hidaFont_16 {font-size: 24px;}
     @mixin hidaFont_14 {font-size: 20px;}
     
@@ -1436,6 +1436,197 @@
                             }
                         }
                     }
+
+                    &.detail{
+
+                        .btn.more {
+                            margin-top: unset;
+                            a {
+                                font-size: 20px;
+                                padding: 0 30px;
+                                width: auto; height: 60px;
+                                min-width: 260px;
+                            }
+                        }
+
+                        .detail_body {
+                            gap: 0;
+                            .navi {
+                                .lang {
+                                    margin: 0 0 30px 0;
+                                    li {
+                                        margin-right: 20px;
+                                        a { font-size: 20px;}
+                                    }
+                                }
+                                h2 {
+                                    @include hidaFont_50;
+                                    margin-bottom: 30px;
+                                }
+                                .date {
+                                    padding-bottom: 48px;
+                                    margin: 0;
+                                    font-size: 20px;
+                                }
+                                .info {display: none;}
+                            }
+
+                            .content {
+                                margin-top: 0;
+                                dl {
+                                    &#trend, &#cmf, &#newsletter {
+                                        padding: 100px 0;
+                                    }
+                            
+
+                                    &#trend {
+                                        .info {
+                                            p {
+                                                @include font-Pre;
+                                                font-size: 18px;
+                                                line-height: 1.5;
+                                                letter-spacing: -0.36px;
+                                                text-align: center;
+                                            }
+                                            .btn.more {
+                                                margin-top: 30px;
+                                            }
+                                        }
+                                    }
+
+                                    &#cmf {
+                                        @include marginTop-50;
+                                        
+                                        .info {
+                                            h2 {
+                                                font-size: 28px;
+                                            }
+                                            p {
+                                                @include font-Pre;
+                                                @include marginTop-50;
+                                                font-size: 24px;
+                                            }
+                                            .btn.more {
+                                                @include marginTop-50;
+                                            }
+                                        }
+
+                                        .product {
+                                            margin-top: 90px;
+                                            padding: 0;
+                                            ul {
+                                                display: flex; flex-wrap: wrap; gap: 40px;
+                                                li {
+                                                    width: calc(33.3333% - 27px);
+                                                    a {
+                                                        display: block;
+                                                        figure {
+                                                            position: relative;
+                                                            div {
+                                                            }
+                                                            figcaption {
+                                                                margin-top: 30px;
+                                                                p {
+                                                                    font-size: 16px;
+                                                                    line-height: 1.38;
+                                                                    &:nth-child(1) {
+                                                                        display: none;
+                                                                    }
+                                                                    &:nth-child(2) {
+                                                                        margin-top: 0;
+                                                                        font-size: 20px;
+                                                                        line-height: 1.5;
+                                                                    }
+                                                                    &:nth-child(3) {
+                                                                        font-size: 18px;
+                                                                        line-height: 1.5;
+                                                                        margin-top: 0
+                                                                    }
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+
+                                    &#newsletter {
+                                        @include marginTop-50;
+                                        dd {
+                                            gap: 40px;
+                                            overflow: auto;
+                                            &::-webkit-scrollbar{display: none;}
+                                            a {
+                                                width: 280px;
+                                                img {
+                                                    width: 280px; height: 280px;object-fit: cover;
+                                                }
+                                                span {
+                                                    font-size: 24px;
+                                                    line-height: 1.5;
+                                                    letter-spacing: -0.48px;
+                                                }
+                                            }
+                                        }
+
+                                    }
+
+                                    &#hida_info {
+                                        margin-top: 100px;
+                                        h2 {
+                                            font-size: 24px;
+                                            line-height: 1.5;
+                                            letter-spacing: -0.48px;
+                                        }
+                                        ul {
+                                            margin: 50px 0 100px 0; gap: 30px 60px;
+                                            li {
+                                                display: flex; justify-content: space-between; align-items: center;
+                                                width: calc(33.333% - 40px);
+                                                border-bottom: 2px solid #000;
+                                                a {
+                                                    font-size: 20px;
+                                                    line-height: 1.5;
+                                                    color: #000;
+                                                    &::after {display: none}
+                                                }
+                                                img {
+                                                    all: unset; position:  unset;
+                                                    width: 14px; height: 14px;
+                                                }
+                                            }
+                                        }
+                                        .btn.more {
+                                            margin-top: 30px;
+                                            &.mt-10 {margin-top: 10px;}
+                                        }
+
+                                        p {
+                                            @include marginTop-50;
+                                            font-size: 20px;
+                                            line-height: 1.5;
+                                        }
+                                    }
+                                    
+                                    &#newslist {
+                                        ul {
+                                            li {
+                                                padding: 15px 18px;
+                                                a {
+                                                    p {
+                                                        margin-left: 60px;
+                                                        font-size: 20px;
+                                                    }
+                                                    span {display: none;}
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
 
             }
@@ -1455,6 +1646,7 @@
     @mixin subLayoutPadding {padding-left: 4%; padding-right: 4%;}
 
     @mixin marginTop-80 {margin-top: 50px;}
+    @mixin marginTop-50 {margin-top: 40px;}
 
 
     // header footer
@@ -2024,6 +2216,156 @@
                                                 }
                                             }
                                             
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    
+                    &.detail{
+                        .btn.more {
+                            a {
+                                font-size: 16px;
+                                padding: 10px 20px;
+                                width: auto; height: auto;
+                            }
+                        }
+
+                        .detail_body {
+                            .navi {
+                                .lang {
+                                    li {
+                                        a { font-size: 16px;}
+                                    }
+                                }
+                                h2 {
+                                    @include hidaFont_50;
+                                }
+                                .date {
+                                    font-size: 16px;
+                                }
+                            }
+
+                            .content {
+                                dl {
+                                    &#trend, &#cmf, &#newsletter {padding: 80px 0;}
+                            
+
+                                    &#trend {
+                                        .info {
+                                            p {
+                                                font-size: 16px;
+                                            }
+                                            .btn.more {
+                                            }
+                                        }
+                                    }
+
+                                    &#cmf {
+                                        @include marginTop-50;
+                                        .info {
+                                            h2 {
+                                                // font-size: 28px;
+                                                font-size: 24px
+                                            }
+                                            p {
+                                                @include marginTop-50;
+                                                // font-size: 24px;
+                                                font-size: 18px;
+                                            }
+                                            .btn.more {
+                                                @include marginTop-50;
+                                            }
+                                        }
+
+                                        .product {
+                                            margin-top: 80px;
+                                            ul {
+                                                gap: 60px 40px;
+                                                li {
+                                                    width: calc(50% - 20px);
+                                                    a {
+                                                        figure {
+                                                            div {
+                                                            }
+                                                            figcaption {
+                                                                p {
+                                                                    &:nth-child(2) {
+                                                                        margin-top: 0;
+                                                                        font-size: 18px;
+                                                                    }
+                                                                    &:nth-child(3) {
+                                                                        font-size: 16px;
+                                                                    }
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+
+                                    &#newsletter {
+                                        @include marginTop-50;
+                                        dd {
+                                            gap: 20px;
+                                            a {
+                                                width: 175px;
+                                                img {
+                                                    width:175px; height:175px;
+                                                }
+                                                span {
+                                                    // font-size: 24px;
+                                                    font-size: 18px;
+                                                }
+                                            }
+                                        }
+
+                                    }
+
+                                    &#hida_info {
+                                        margin-top: 80px;
+                                        h2 {
+                                            // font-size: 24px;
+                                            font-size: 18px;
+                                        }
+                                        ul {
+                                            margin: 40px 0 80px 0; gap: 20px 30px;
+                                            li {
+                                                width: calc(50% - 15px);
+                                                a {
+                                                    font-size: 18px;
+                                                }
+                                                img {
+                                                    width: 10px; height: 10px;
+                                                }
+                                            }
+                                        }
+
+                                        p {
+                                            @include marginTop-50;
+                                            // font-size: 20px;
+                                            font-size: 16px;
+                                        }
+                                    }
+                                    
+                                    &#newslist {
+                                        margin-top: 80px;
+                                        ul {
+                                            li {
+                                                padding: 10px 20px;
+                                                a {
+                                                    p {
+                                                        margin-left: 30px;
+                                                        // font-size: 20px;
+                                                        font-size: 16px;
+                                                    }
+                                                    span {display: none;}
+                                                }
+                                            }
                                         }
                                     }
                                 }
