--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -1939,6 +1939,128 @@ body {
                     }
                 }
 
+                &.detail {
+                    > section {
+                        >article {
+                            .detail_head {}
+                            .detail_body {
+                                .product_detail {
+                                    display: flex;
+                                    gap: 4.5%;
+                                    .product_thumb {
+                                        max-width: 620px; width: 100%;
+                                        .thumb_big {
+                                            img {@include fullsize;object-fit: cover;}
+                                        }
+                                        
+                                        .thumb_small {
+                                            position: relative;
+                                            @include marginTop-50;
+                                            .swiper-slide {
+                                                opacity: .3;
+                                                @include transition(opacity .3s);
+                                                &.swiper-slide-thumb-active {opacity: 1;}
+                                            }
+                                            .swiper-container {
+                                                max-width: 90%;
+                                            }
+                                        }
+                                     
+                                    }
+
+                                    .product_info {
+                                        > h2 {
+                                            font-size: 24px;
+                                            font-weight: bold;
+                                            line-height: 1.5;
+                                            letter-spacing: -0.48px;
+                                            color: #000;
+                                            padding-bottom: 48px;
+                                            margin-bottom: 50px;
+                                            border-bottom: 2px solid #000;
+                                        }
+                                    
+
+                                        .info_wrap {
+                                            >h3 {
+                                                margin: 50px 0 30px;
+                                                padding-bottom: 9px;
+                                                border-bottom: 1px solid #e5e5e5;
+
+                                                font-size: 20px;
+                                                font-weight: bold;
+                                                line-height: 1.5;
+                                                letter-spacing: -0.4px;
+                                                color: #000;
+                                            }
+                                            > dl {
+                                                margin-bottom: 20px;
+                                                display: flex;
+                                                > dt {
+                                                    min-width: 140px;
+                                                    font-size: 16px;
+                                                    font-weight: bold;
+                                                    line-height: 1.5;
+                                                    letter-spacing: -0.32px;
+                                                    color: #999;
+                                                }
+                                                > dd {
+                                                    font-size: 16px;
+                                                    line-height: 1.5;
+                                                    letter-spacing: -0.32px;
+                                                    color: #000;
+                                                    > p {
+                                                        display: flex; flex-wrap: wrap;
+                                                        &.board_wrap {
+                                                            gap: 5px 10px;
+                                                            a {
+                                                                @include transition(all .15s);
+                                                                padding: 8px 15px;
+                                                                display: inline-block;
+                                                                border: solid 1px #ddd;
+                                                                font-size: 14px;
+                                                                line-height: 1.43;
+                                                                letter-spacing: -0.28px;
+                                                                color: #000;
+                                                                &:hover {
+                                                                    background-color: #000;
+                                                                    color: #fff;
+                                                                }
+                                                            }
+                                                        }
+                                                        &.line_wrap {
+                                                            gap: 10px 24px;
+                                                            a {
+                                                                text-decoration: underline;
+                                                                &:last-child {
+                                                                    position: relative;
+                                                                    &::after {
+                                                                        position: absolute;
+                                                                        left: -14px; top: 50%; transform: translateY(-50%);
+                                                                        content: '';
+                                                                        width: 4px; height: 9px;
+                                                                        background: url('../images/common/ico_arrow_06.svg')no-repeat center/cover;
+                                                                    }
+                                                                }
+                                                            }
+
+                                                        }
+
+                                                   
+                                                    }
+                                                }
+                                            }
+
+                                        }
+
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                }
+
             }
             
 
