--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -1941,7 +1941,63 @@ body {
                     }
 
                 }
+            }
+            
+            &#portfolio {
+                @include marginTop-200;
+                @include fixed-layout_1412;
 
+                &.list {
+                    .sec_tit {
+                        .nav_location {
+                            width: 100%;
+                            display: flex; justify-content: space-between;
+                            ul {
+                                display: flex; align-items: center; gap: 30px;
+                                flex-wrap: wrap;
+                                li {
+                                    a {
+                                        @include font-openSans;
+                                        font-size: 15px;
+                                        line-height: 1.33;
+                                        letter-spacing: -0.3px;
+                                        &.active {
+                                            font-weight: bold;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .content_wrap {
+                        margin-top: 110px;
+                        padding: 0 30px;
+                        .con {
+                            ul {
+                                display: flex; flex-wrap: wrap; 
+                                gap: 50px 106px;
+                                li {
+                                    width: 380px;
+                                    a {
+                                        display: block;
+                                        figure {
+                                            .img_wrap { background-color: #F5F5F5; }
+                                            figcaption {
+                                                @include board_text;
+                                                margin-top: 16px;
+                                                font-size: 16px;
+                                                line-height: 1.5;
+                                                letter-spacing: -0.32px;
+                                                color: #000;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
+                    }
+                }
             }
             
 
