--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -808,6 +808,55 @@
                     }
 
                 }
+
+                    
+                &#portfolio {
+                    @include marginTop-200;
+
+                    &.list {
+                        .sec_tit {
+                            @include subLayoutPadding;
+                            border-bottom: 2px solid #f1f1f1;
+                            .nav_location {
+                                ul {
+                                    // gap: 30px;
+                                    li {
+                                        a {
+                                            // font-size: 15px;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .content_wrap {
+                            margin-top: 110px;
+                            padding: 0 8.3%;
+                            .con {
+                                ul {
+                                    gap: 50px 40px;
+                                    li {
+                                        width: calc(33.3333% - 27px);
+                                        a {
+                                            display: block;
+                                            figure {
+                                                .img_wrap { background-color: #F5F5F5; }
+                                                figcaption {
+                                                    margin-top: 16px;
+                                                    font-size: 16px;
+                                                    line-height: 1.5;
+                                                    letter-spacing: -0.32px;
+                                                    color: #000;
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+
+                        }
+                    }
+                }
+            
     
             }
         } 
@@ -2860,6 +2909,7 @@
                     }
 
                 }
+                
 
             }
         }
