--- a/kor/include/_function.scss
+++ b/kor/include/_function.scss
@@ -104,6 +104,7 @@ $color-200 : #ea5417;
 // FONT
 @mixin font-M {font-family: 'Montserrat';}
 @mixin font-nm {font-family: 'Nanum Myeongjo';}
+@mixin font-OpenSans {font-family: 'Open Sans';}
 @mixin font-R {font-family: 'Roboto';}
 @mixin font-Pre {font-family: 'Pretendard';}
 @mixin font-Nanum {font-family: 'Nanum Brush Script';}
@@ -273,6 +274,7 @@ body {
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); /* Montserrat */
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); /* Pretendard */
 @import url('https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css'); /* SUIT */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); /* Open Sans */
 // @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap'); /* Noto Sans KR */
 // @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); /* Roboto */
 // @import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap'); /* Nanum Brush Script  */
